added zotero functionality; preparing for submission to ecology letters

--- a/ms_2a_res_disc.Rmd
+++ b/ms_2a_res_disc.Rmd
@@ -2,32 +2,11 @@
 output: pdf_document
 ---
 
-# Introduction
-
-Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation, among many others.  This knowledge provides foundational information for 
- understanding species ranges and diversity,
- predicting species responses to human impacts and climate change,
- and managing and protecting species effectively.
-A rich literature tackles the many dimensions of these questions.
-
-One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (1) and International Union for Conservation of Nature (IUCN) (2).  These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status (3, 4, 5), evaluating global biodiversity patterns (6, 7, 8, 9), predicting species range shifts (10), and setting conservation priorities (11).
-
-
-<!--
-Three foundational papers relating to AquaMaps (Kaschner et al. 2006, 2011; Ready et al. 2010) have been cited a total of 315 times.
--->
-
-The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (12, 13).
-
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of marine species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
-
-We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (3, 4) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (11) - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.
-
 # Results and Discussion
 
-The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (2) - essentially a refined extent of occurrence, based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global map of "probability of occurrence" for each species (14, 15).  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence (3, 4).
+The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015] - essentially a refined extent of occurrence, based on observation records and informed by expert understanding of species' range and habitat preferences.  In contrast, AquaMaps models species distribution based on environmental preferences (e.g., temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global map of "probability of occurrence" for each species [@kaschner_mapping_2006; @ready_predicting_2010].  Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., the Ocean Health Index defines presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].
 
-The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (12).  By comparing maps resulting from IUCN and AquaMaps methodologies, we can identify and possibly address mechanistic causes for each type of error.
+The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006].  By comparing maps resulting from IUCN and AquaMaps methodologies, we can identify and possibly address mechanistic causes for each type of error.
 
 The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
 
@@ -77,7 +56,7 @@ The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) i
 
 Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are unhelpful when the distributions are poorly aligned.
 
-The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) (16) and the Global Biodiversity Information Facility (GBIF) (17)) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
+The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
 
 
 # Implications
@@ -115,7 +94,7 @@ p_spp_both_ohi <- round(n_spp_both_ohi/n_spp_ohi * 100, 1)
 
 ```
 
-The global Ocean Health Index (OHI) (3, 4), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distribution data from Red List-assessed species in both IUCN and AquaMaps datasets (n = `r format(n_spp_ohi, big.mark = ',')`), prioritizing IUCN data for the `r format(n_spp_both_ohi, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data.  
+The global Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015], a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distribution data from Red List-assessed species in both IUCN and AquaMaps datasets (n = `r format(n_spp_ohi, big.mark = ',')`), prioritizing IUCN data for the `r format(n_spp_both_ohi, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data.  
 
 We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species, so a decrease in a region’s score under scenario 1 would indicate increased spatial representation of threatened species for that region.  Shifting priority from IUCN to AquaMaps may increase or decrease a species’ apparent range, so a decrease in region score for scenario 2 may indicate a decrease in spatial representation of low-risk species, an increase in spatial representation of high-risk species, or a combination of both. Scenario three combines effects of scenarios 1 and 2.
  
@@ -123,7 +102,7 @@ Given that only `r p_spp_both_ohi`% of species are included in both datasets, it
 
 **Case Study: MPA Gap Analysis**
 
-Klein et al. (11) compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
+Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
 We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the most recent AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig. 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
 
@@ -132,7 +111,7 @@ We recalculated the amount of under-protected and gap species using either IUCN 
 AquaMaps and IUCN range maps show reasonable agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other approaches exist for species distribution modeling, these two are the only ones applied globally across different marine taxa.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.  Several likely drivers of commission and omission errors between these datasets point to a few important ways to improve range alignment.
 
 For IUCN range data, clipping ranges to known depth limits improves output for many species, most notably corals and reef-associated fishes.  If species' depth limits are not known, simple rules of thumb will likely reduce commission errors without introducing substantial omission errors.  For example, for most corals, researchers could clip range maps to the photosynthetic limit of 200 meters.
- For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World (18) would likely decrease commission errors and improve predictive power, especially for data-poor species.
+ For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World [@spalding_marine_2007] would likely decrease commission errors and improve predictive power, especially for data-poor species.
  For either data set, maps based on few occurrences are more likely to include errors of commission and omission.  Occurrence counts from external sources such as OBIS or GBIF can help identify relatively data-poor species; additionally, the "occurcells" attribute in the AquaMaps data set, which counts the number of half-degree cells used to generate the environmental envelope for each species, can be used in a similar manner.
 
 Many studies using AquaMaps data test the sensitivity of results by varying the probability of occurrence threshold to determine presence.  This decision ultimately represents a tradeoff between errors of commission (low threshold) and omission (high threshold).  Using AquaMaps in conjunction with IUCN can mitigate potential errors, while also increasing the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized. In this case, we recommend a presence threshold of 0% as it most closely approximates the "limits of distribution" criterion defined by IUCN data providers.
