--- a/case_study_mpa/3_mpa_spp_analysis.Rmd
+++ b/case_study_mpa/3_mpa_spp_analysis.Rmd
@@ -20,10 +20,10 @@ dir_M             <- c('Windows' = '//mazu.nceas.ucsb.edu/ohi',
 
 dir_git <- '~/github/IUCN-AquaMaps'
   
-dir_anx <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
+dir_anx <- file.path(dir_M, 'git-annex/globalprep/SPP_ICO')
 dir_fig <- file.path(dir_git, 'figures')
 dir_data <- file.path(dir_git, 'data')
-dir_am_data <- file.path(dir_N, 'git-annex/globalprep/_raw_data/aquamaps/d2015/csv')
+dir_am_data <- file.path(dir_M, 'git-annex/globalprep/_raw_data/aquamaps/d2015/csv')
 
 
 # if(basename(getwd()) != 'IUCN-AquaMaps') setwd(dir_git)
@@ -237,11 +237,16 @@ No.  Save that for time-series analysis.
 ### 
 
 ### compare results using only IUCN species maps
-dir_iucn_data <- file.path(dir_N, 'git-annex/globalprep/_raw_data/iucn_spp')
-iucn_cells_file <- file.path(dir_iucn_data, 'iucn_cells_v2016.csv')
-iucn_spp_cells <- read_csv(iucn_cells_file, col_types = 'cddddc') %>%
-  as.data.frame(stringsAsFactors = FALSE)
+dir_iucn_data <- file.path(dir_M, 'git-annex/globalprep/_raw_data/iucn_spp')
+dir_iucn_data <- file.path(dir_M, 'git-annex/globalprep/spp_ico')
+iucn_cells_file <- file.path(dir_iucn_data, 'vAM_IUCN/int/iucn_cells_spp1.csv')
+iucn_spp_cells <- read_csv(iucn_cells_file, col_types = 'cddddc')
+write_csv(iucn_spp_cells, iucn_cells_file)
+x <- read_csv(file.path(dir_iucn_data, 'v2016/int/spp_all_cleaned.csv')) %>%
+  filter(spp_group != 'BOTW' & !is.na(spp_group))
 
+iucn_spp_cells1 <- iucn_spp_cells %>% filter(iucn_sid %in% x$iucn_sid)
+  
 iucn_spp_cells <- iucn_spp_cells %>%
   left_join(cell_df_klein, by = 'loiczid')
 
