--- a/ms_5_fig_legends.Rmd
+++ b/ms_5_fig_legends.Rmd
@@ -18,7 +18,7 @@ n_bonyfish <- nrow(spp_map_pairs %>%
                                              'DAMSELFISH', 'BONEFISH_TARPONS')))
 ```
 
-__Fig. 1.__ (A) Number and proportion of species by taxa included in each dataset.  Overlapping species are dominated by bony fishes (`r format(n_bonyfish, big.mark = ',')` species, primarily tropical taxa) and corals (`r format(n_corals, big.mark = ',')` species).  (B, C) Global marine species count per cell according to (B) AquaMaps and (C) IUCN.  The margin frequency plots show relative species count per cell at each latitude and longitude. 
+__Fig. 1.__ (A) Number and proportion of species by taxa included in each dataset.  Overlapping species are dominated by bony fishes (`r format(n_bonyfish, big.mark = ',')` species, primarily tropical taxa) and corals (`r format(n_corals, big.mark = ',')` species).  (B, C) Global marine species count per 0.5° cell according to (B) AquaMaps and (C) IUCN.  The margin frequency plots show relative species count per cell at each latitude and longitude. 
 
 ``` {r tally_quad_counts, echo = FALSE}
 dist_median <- round(median(spp_map_pairs$sm_perc,    na.rm = TRUE), 1)
